# whatsapp-commercial-analyzer

./: .env.example  .gitignore  PLAN.md  PROGRESS.md  README.md  TECH_PLAN.md  clean-claude-memory.sh  pyproject.toml  script-comercial.md  stage4.logging  tonight.sh
input/: script-comercial.md  script.yaml
prompts/: prepare_generate_script.md  stage3_expand_script.md  stage4_customer_batch.md  stage4_spa_template.md  stage4_spa_template_batch.md  stage5_sentiment.md  stage6_conversion.md  stage8_report.md
scripts/: label_ground_truth.py  prepare.py  probe_cli.sh  probe_max.py  run_pipeline.py  run_probe_max.sh  run_stage4_mini.sh  run_verify_max.sh  verify_stage1.py  verify_stage2.py  verify_stage3.py  verify_stage3_max.py  verify_stage4.py  verify_stage4_max.py  verify_stage4_mini.py  verify_stage5.py  verify_stage6.py  verify_stage8.py
src/: cluster.py  context.py  conversion.py  dedupe.py  exceptions.py  label.py  llm.py  load.py  prepare.py  report.py  schemas.py  script_index.py  sentiment.py
tests/: test_cluster.py  test_conversion.py  test_dedupe.py  test_label.py  test_llm.py  test_load.py  test_pipeline.py  test_report.py  test_script_index.py  test_sentiment.py
tools/: build_tiny_db.py
